fix(mobile) Fix height of listview [OAPTAU-302]
 - eliminate too big canvas
 - clip canvas to listview size to eliminate additional scroll

--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -5,6 +5,7 @@
 
 /******************** listview common style *********************/
 .ui-listview {
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
 	list-style: none;
